src/fimlyParser.py
# Generated from fimly.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class fimlyParser ( Parser ):

    grammarFileName = "fimly.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'inicio'", "'leia'", "'escreva'", "'fim'", 
                     "'se'", "'entao'", "'senao'", "'enquanto'", "'faca'", 
                     "'int'", "'float'", "'string'", "'+'", "'-'", "'/'", 
                     "'*'", "'=='", "'!='", "'>='", "'<='", "'>'", "'<'", 
                     "'='", "'!'", "'&&'", "'||'", "'('", "':'", "')'", 
                     "'{'", "'}'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "INICIO", "LEIA", "ESCREVA", "FIM", "SE", 
                      "ENTAO", "SENAO", "ENQUANTO", "FACA", "TIPO_INTEIRO", 
                      "TIPO_FLOAT", "TIPO_STRING", "ADICAO", "SUBTRACAO", 
                      "DIVISAO", "MULTIPLICA", "IGUAL", "DIFERENTE", "MAIORIGUAL", 
                      "MENORIGUAL", "MAIOR", "MENOR", "ATRIBUICAO", "NAO", 
                      "E", "OU", "ABRE_PAR", "DOIS_PONTOS", "FECHA_PAR", 
                      "ABRE_CHAVE", "FECHA_CHAVE", "PONTO_VIR", "VIRG", 
                      "ID", "INTEIRO", "FLOAT", "STRING", "COMENTARIO", 
                      "WS" ]

    RULE_fimly = 0
    RULE_comando_declaracao = 1
    RULE_tipo = 2
    RULE_comandos = 3
    RULE_comando_ler = 4
    RULE_comando_escrever = 5
    RULE_lista_expressao = 6
    RULE_bloco_comandos = 7
    RULE_comando_condicional = 8
    RULE_comando_repeticao = 9
    RULE_comando_atribuicao = 10
    RULE_expressao = 11
    RULE_expressao_logica = 12
    RULE_expressao_comparacao = 13
    RULE_expressao_aritmetica = 14
    RULE_termo = 15
    RULE_fator = 16

    ruleNames =  [ "fimly", "comando_declaracao", "tipo", "comandos", "comando_ler", 
                   "comando_escrever", "lista_expressao", "bloco_comandos", 
                   "comando_condicional", "comando_repeticao", "comando_atribuicao", 
                   "expressao", "expressao_logica", "expressao_comparacao", 
                   "expressao_aritmetica", "termo", "fator" ]

    EOF = Token.EOF
    INICIO=1
    LEIA=2
    ESCREVA=3
    FIM=4
    SE=5
    ENTAO=6
    SENAO=7
    ENQUANTO=8
    FACA=9
    TIPO_INTEIRO=10
    TIPO_FLOAT=11
    TIPO_STRING=12
    ADICAO=13
    SUBTRACAO=14
    DIVISAO=15
    MULTIPLICA=16
    IGUAL=17
    DIFERENTE=18
    MAIORIGUAL=19
    MENORIGUAL=20
    MAIOR=21
    MENOR=22
    ATRIBUICAO=23
    NAO=24
    E=25
    OU=26
    ABRE_PAR=27
    DOIS_PONTOS=28
    FECHA_PAR=29
    ABRE_CHAVE=30
    FECHA_CHAVE=31
    PONTO_VIR=32
    VIRG=33
    ID=34
    INTEIRO=35
    FLOAT=36
    STRING=37
    COMENTARIO=38
    WS=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FimlyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INICIO(self):
            return self.getToken(fimlyParser.INICIO, 0)

        def FIM(self):
            return self.getToken(fimlyParser.FIM, 0)

        def comando_declaracao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fimlyParser.Comando_declaracaoContext)
            else:
                return self.getTypedRuleContext(fimlyParser.Comando_declaracaoContext,i)


        def comandos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fimlyParser.ComandosContext)
            else:
                return self.getTypedRuleContext(fimlyParser.ComandosContext,i)


        def getRuleIndex(self):
            return fimlyParser.RULE_fimly

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFimly" ):
                listener.enterFimly(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFimly" ):
                listener.exitFimly(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFimly" ):
                return visitor.visitFimly(self)
            else:
                return visitor.visitChildren(self)




    def fimly(self):

        localctx = fimlyParser.FimlyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_fimly)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==34:
                self.state = 34
                self.comando_declaracao()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self.match(fimlyParser.INICIO)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 17179869484) != 0):
                self.state = 41
                self.comandos()
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 47
            self.match(fimlyParser.FIM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_declaracaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(fimlyParser.ID, 0)

        def DOIS_PONTOS(self):
            return self.getToken(fimlyParser.DOIS_PONTOS, 0)

        def tipo(self):
            return self.getTypedRuleContext(fimlyParser.TipoContext,0)


        def PONTO_VIR(self):
            return self.getToken(fimlyParser.PONTO_VIR, 0)

        def getRuleIndex(self):
            return fimlyParser.RULE_comando_declaracao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_declaracao" ):
                listener.enterComando_declaracao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_declaracao" ):
                listener.exitComando_declaracao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComando_declaracao" ):
                return visitor.visitComando_declaracao(self)
            else:
                return visitor.visitChildren(self)




    def comando_declaracao(self):

        localctx = fimlyParser.Comando_declaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_comando_declaracao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(fimlyParser.ID)
            self.state = 50
            self.match(fimlyParser.DOIS_PONTOS)
            self.state = 51
            self.tipo()
            self.state = 52
            self.match(fimlyParser.PONTO_VIR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TIPO_INTEIRO(self):
            return self.getToken(fimlyParser.TIPO_INTEIRO, 0)

        def TIPO_FLOAT(self):
            return self.getToken(fimlyParser.TIPO_FLOAT, 0)

        def TIPO_STRING(self):
            return self.getToken(fimlyParser.TIPO_STRING, 0)

        def getRuleIndex(self):
            return fimlyParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = fimlyParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7168) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comando_ler(self):
            return self.getTypedRuleContext(fimlyParser.Comando_lerContext,0)


        def comando_escrever(self):
            return self.getTypedRuleContext(fimlyParser.Comando_escreverContext,0)


        def comando_condicional(self):
            return self.getTypedRuleContext(fimlyParser.Comando_condicionalContext,0)


        def comando_repeticao(self):
            return self.getTypedRuleContext(fimlyParser.Comando_repeticaoContext,0)


        def comando_atribuicao(self):
            return self.getTypedRuleContext(fimlyParser.Comando_atribuicaoContext,0)


        def getRuleIndex(self):
            return fimlyParser.RULE_comandos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandos" ):
                listener.enterComandos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandos" ):
                listener.exitComandos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandos" ):
                return visitor.visitComandos(self)
            else:
                return visitor.visitChildren(self)




    def comandos(self):

        localctx = fimlyParser.ComandosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_comandos)
        try:
            self.state = 61
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.comando_ler()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.comando_escrever()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 58
                self.comando_condicional()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 4)
                self.state = 59
                self.comando_repeticao()
                pass
            elif token in [34]:
                self.enterOuterAlt(localctx, 5)
                self.state = 60
                self.comando_atribuicao()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_lerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEIA(self):
            return self.getToken(fimlyParser.LEIA, 0)

        def ABRE_PAR(self):
            return self.getToken(fimlyParser.ABRE_PAR, 0)

        def ID(self):
            return self.getToken(fimlyParser.ID, 0)

        def FECHA_PAR(self):
            return self.getToken(fimlyParser.FECHA_PAR, 0)

        def PONTO_VIR(self):
            return self.getToken(fimlyParser.PONTO_VIR, 0)

        def getRuleIndex(self):
            return fimlyParser.RULE_comando_ler

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_ler" ):
                listener.enterComando_ler(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_ler" ):
                listener.exitComando_ler(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComando_ler" ):
                return visitor.visitComando_ler(self)
            else:
                return visitor.visitChildren(self)




    def comando_ler(self):

        localctx = fimlyParser.Comando_lerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_comando_ler)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(fimlyParser.LEIA)
            self.state = 64
            self.match(fimlyParser.ABRE_PAR)
            self.state = 65
            self.match(fimlyParser.ID)
            self.state = 66
            self.match(fimlyParser.FECHA_PAR)
            self.state = 67
            self.match(fimlyParser.PONTO_VIR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_escreverContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ESCREVA(self):
            return self.getToken(fimlyParser.ESCREVA, 0)

        def ABRE_PAR(self):
            return self.getToken(fimlyParser.ABRE_PAR, 0)

        def FECHA_PAR(self):
            return self.getToken(fimlyParser.FECHA_PAR, 0)

        def PONTO_VIR(self):
            return self.getToken(fimlyParser.PONTO_VIR, 0)

        def lista_expressao(self):
            return self.getTypedRuleContext(fimlyParser.Lista_expressaoContext,0)


        def getRuleIndex(self):
            return fimlyParser.RULE_comando_escrever

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_escrever" ):
                listener.enterComando_escrever(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_escrever" ):
                listener.exitComando_escrever(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComando_escrever" ):
                return visitor.visitComando_escrever(self)
            else:
                return visitor.visitChildren(self)




    def comando_escrever(self):

        localctx = fimlyParser.Comando_escreverContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_comando_escrever)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(fimlyParser.ESCREVA)
            self.state = 70
            self.match(fimlyParser.ABRE_PAR)
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 257832255488) != 0):
                self.state = 71
                self.lista_expressao()


            self.state = 74
            self.match(fimlyParser.FECHA_PAR)
            self.state = 75
            self.match(fimlyParser.PONTO_VIR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Lista_expressaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fimlyParser.ExpressaoContext)
            else:
                return self.getTypedRuleContext(fimlyParser.ExpressaoContext,i)


        def VIRG(self, i:int=None):
            if i is None:
                return self.getTokens(fimlyParser.VIRG)
            else:
                return self.getToken(fimlyParser.VIRG, i)

        def getRuleIndex(self):
            return fimlyParser.RULE_lista_expressao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLista_expressao" ):
                listener.enterLista_expressao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLista_expressao" ):
                listener.exitLista_expressao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLista_expressao" ):
                return visitor.visitLista_expressao(self)
            else:
                return visitor.visitChildren(self)




    def lista_expressao(self):

        localctx = fimlyParser.Lista_expressaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_lista_expressao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.expressao()
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==33:
                self.state = 78
                self.match(fimlyParser.VIRG)
                self.state = 79
                self.expressao()
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bloco_comandosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ABRE_CHAVE(self):
            return self.getToken(fimlyParser.ABRE_CHAVE, 0)

        def FECHA_CHAVE(self):
            return self.getToken(fimlyParser.FECHA_CHAVE, 0)

        def comandos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fimlyParser.ComandosContext)
            else:
                return self.getTypedRuleContext(fimlyParser.ComandosContext,i)


        def getRuleIndex(self):
            return fimlyParser.RULE_bloco_comandos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloco_comandos" ):
                listener.enterBloco_comandos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloco_comandos" ):
                listener.exitBloco_comandos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloco_comandos" ):
                return visitor.visitBloco_comandos(self)
            else:
                return visitor.visitChildren(self)




    def bloco_comandos(self):

        localctx = fimlyParser.Bloco_comandosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_bloco_comandos)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(fimlyParser.ABRE_CHAVE)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 17179869484) != 0):
                self.state = 86
                self.comandos()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.match(fimlyParser.FECHA_CHAVE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_condicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SE(self):
            return self.getToken(fimlyParser.SE, 0)

        def ABRE_PAR(self):
            return self.getToken(fimlyParser.ABRE_PAR, 0)

        def expressao(self):
            return self.getTypedRuleContext(fimlyParser.ExpressaoContext,0)


        def FECHA_PAR(self):
            return self.getToken(fimlyParser.FECHA_PAR, 0)

        def bloco_comandos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fimlyParser.Bloco_comandosContext)
            else:
                return self.getTypedRuleContext(fimlyParser.Bloco_comandosContext,i)


        def SENAO(self):
            return self.getToken(fimlyParser.SENAO, 0)

        def getRuleIndex(self):
            return fimlyParser.RULE_comando_condicional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_condicional" ):
                listener.enterComando_condicional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_condicional" ):
                listener.exitComando_condicional(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComando_condicional" ):
                return visitor.visitComando_condicional(self)
            else:
                return visitor.visitChildren(self)




    def comando_condicional(self):

        localctx = fimlyParser.Comando_condicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_comando_condicional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(fimlyParser.SE)
            self.state = 95
            self.match(fimlyParser.ABRE_PAR)
            self.state = 96
            self.expressao()
            self.state = 97
            self.match(fimlyParser.FECHA_PAR)
            self.state = 98
            self.bloco_comandos()
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 99
                self.match(fimlyParser.SENAO)
                self.state = 100
                self.bloco_comandos()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_repeticaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENQUANTO(self):
            return self.getToken(fimlyParser.ENQUANTO, 0)

        def ABRE_PAR(self):
            return self.getToken(fimlyParser.ABRE_PAR, 0)

        def expressao(self):
            return self.getTypedRuleContext(fimlyParser.ExpressaoContext,0)


        def FECHA_PAR(self):
            return self.getToken(fimlyParser.FECHA_PAR, 0)

        def FACA(self):
            return self.getToken(fimlyParser.FACA, 0)

        def bloco_comandos(self):
            return self.getTypedRuleContext(fimlyParser.Bloco_comandosContext,0)


        def getRuleIndex(self):
            return fimlyParser.RULE_comando_repeticao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_repeticao" ):
                listener.enterComando_repeticao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_repeticao" ):
                listener.exitComando_repeticao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComando_repeticao" ):
                return visitor.visitComando_repeticao(self)
            else:
                return visitor.visitChildren(self)




    def comando_repeticao(self):

        localctx = fimlyParser.Comando_repeticaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_comando_repeticao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(fimlyParser.ENQUANTO)
            self.state = 104
            self.match(fimlyParser.ABRE_PAR)
            self.state = 105
            self.expressao()
            self.state = 106
            self.match(fimlyParser.FECHA_PAR)
            self.state = 107
            self.match(fimlyParser.FACA)
            self.state = 108
            self.bloco_comandos()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_atribuicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(fimlyParser.ID, 0)

        def ATRIBUICAO(self):
            return self.getToken(fimlyParser.ATRIBUICAO, 0)

        def expressao(self):
            return self.getTypedRuleContext(fimlyParser.ExpressaoContext,0)


        def PONTO_VIR(self):
            return self.getToken(fimlyParser.PONTO_VIR, 0)

        def getRuleIndex(self):
            return fimlyParser.RULE_comando_atribuicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_atribuicao" ):
                listener.enterComando_atribuicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_atribuicao" ):
                listener.exitComando_atribuicao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComando_atribuicao" ):
                return visitor.visitComando_atribuicao(self)
            else:
                return visitor.visitChildren(self)




    def comando_atribuicao(self):

        localctx = fimlyParser.Comando_atribuicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_comando_atribuicao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(fimlyParser.ID)
            self.state = 111
            self.match(fimlyParser.ATRIBUICAO)
            self.state = 112
            self.expressao()
            self.state = 113
            self.match(fimlyParser.PONTO_VIR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao_logica(self):
            return self.getTypedRuleContext(fimlyParser.Expressao_logicaContext,0)


        def getRuleIndex(self):
            return fimlyParser.RULE_expressao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressao" ):
                listener.enterExpressao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressao" ):
                listener.exitExpressao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressao" ):
                return visitor.visitExpressao(self)
            else:
                return visitor.visitChildren(self)




    def expressao(self):

        localctx = fimlyParser.ExpressaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expressao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.expressao_logica()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expressao_logicaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao_comparacao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fimlyParser.Expressao_comparacaoContext)
            else:
                return self.getTypedRuleContext(fimlyParser.Expressao_comparacaoContext,i)


        def E(self, i:int=None):
            if i is None:
                return self.getTokens(fimlyParser.E)
            else:
                return self.getToken(fimlyParser.E, i)

        def OU(self, i:int=None):
            if i is None:
                return self.getTokens(fimlyParser.OU)
            else:
                return self.getToken(fimlyParser.OU, i)

        def getRuleIndex(self):
            return fimlyParser.RULE_expressao_logica

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressao_logica" ):
                listener.enterExpressao_logica(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressao_logica" ):
                listener.exitExpressao_logica(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressao_logica" ):
                return visitor.visitExpressao_logica(self)
            else:
                return visitor.visitChildren(self)




    def expressao_logica(self):

        localctx = fimlyParser.Expressao_logicaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expressao_logica)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.expressao_comparacao()
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25 or _la==26:
                self.state = 118
                _la = self._input.LA(1)
                if not(_la==25 or _la==26):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 119
                self.expressao_comparacao()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expressao_comparacaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao_aritmetica(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fimlyParser.Expressao_aritmeticaContext)
            else:
                return self.getTypedRuleContext(fimlyParser.Expressao_aritmeticaContext,i)


        def IGUAL(self):
            return self.getToken(fimlyParser.IGUAL, 0)

        def DIFERENTE(self):
            return self.getToken(fimlyParser.DIFERENTE, 0)

        def MAIOR(self):
            return self.getToken(fimlyParser.MAIOR, 0)

        def MAIORIGUAL(self):
            return self.getToken(fimlyParser.MAIORIGUAL, 0)

        def MENOR(self):
            return self.getToken(fimlyParser.MENOR, 0)

        def MENORIGUAL(self):
            return self.getToken(fimlyParser.MENORIGUAL, 0)

        def getRuleIndex(self):
            return fimlyParser.RULE_expressao_comparacao
